--- a/index.html
+++ b/index.html
@@ -1,105 +1,437 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Estudante de Engenharia de Software">
-  <meta name="author" content="Messias Nunesmaia">
-  <meta content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:5" name="robots" />
-  <LINK href="https://www.messias.gq/" rel="canonical">
-  </LINK>
-  <link href="https://www.messias.gq/" rel="amphtml" />
-  <link rel="shortcut icon" href="images/user_icon.svg">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="imagem/x-icon" href="./images/logo.svg" />
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css" rel="stylesheet" />
 
   <!-- Personal CSS -->
-  <link rel="stylesheet" href="personal_css/style.css" type="text/css">
+  <link href="./personal_css/global.css" rel="stylesheet" />
+  <link href="./personal_css/index.css" rel="stylesheet" />
 
-  <!-- Optional Scripts -->
-  <script type="text/javascript" src="https://kit.fontawesome.com/30b455b9ab.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  <!-- Jquery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175891785-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-175891785-1');
-  </script>
 
   <!-- Script Roll -->
-  <script>
-    jQuery(document).ready(function ($) {
-      $(".scroll").click(function (event) {
-        event.preventDefault();
-        $('html,body').animate({ scrollTop: $(this.hash).offset().top }, 600);
-      });
-    });
-  </script>
+  <script src="./personal_js/roll.js"></script>
 
-  <title>Messias</title>
+  <title>Messias - Soluções Em Tecnologia</title>
 </head>
 
 <body>
 
+  <!-- Header -->
+  <header>
 
-  <!-- Choice -->
-  <section id="choice" class="size-page">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
+      <div class="container-fluid">
 
-    <!-- Cards -->
-    <div class="col-12 py-5">
+        <a class="navbar-brand nav-link" href="https://www.messias.gq">
+          <i class="text-success fab fa-medium-m fa-lg"></i>
+        </a>
+        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+          aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarExample01">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link scroll" aria-current="page" href="#about">Sobre</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./sites.html" rel="nofollow">Sites</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./aplicativos.html">Aplicativos</a>
+            </li>
+          </ul>
 
-      <div class="row">
+          <ul class="navbar-nav d-flex flex-row">
+            <!-- Icons -->
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link" href="https://www.linkedin.com/in/messias-nunesmaia/" rel="nofollow" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link" href="https://www.instagram.com/messias_lsn/" rel="nofollow" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li class="nav-item me-3 me-lg-0">
+              <a class="nav-link" href="https://github.com/Messias-Dev" rel="nofollow" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-        <div class="col-10 col-md-4 mx-auto my-auto">
-          <a href="messias.html">
-            <div class="card my-auto levitate">
-              <img class="card-img-top col-12" src="images/eu.svg">
-              <div class="card-body">
-                <h5 class="card-title text-center mt-4 mb-3">Quero conhecer Messias</h5>
-              </div>
+    <!-- Background And Title -->
+    <div id="backgroundAndTitle" class="bg-image shadow-2-strong">
+      <div class="mask" style="background-color: rgba(0, 0, 0, 0.8);">
+        <div class="container d-flex align-items-center justify-content-center text-center h-100">
+          <div class="text-white">
+            <h1 class="mb-3">Soluções Em Tecnologia</h1>
+            <h5 id="subtitleSite" class="mb-5">Sites | Aplicativos</h5>
+            <script>
+              function typeWriter(elemento) {
+                const textoArray = elemento.innerHTML.split('');
+                elemento.innerHTML = '';
+                textoArray.forEach((letra, i) => {
+                  setTimeout(() => elemento.innerHTML += letra, 100 * i);
+                });
+              }
+
+              const titulo = document.getElementById('subtitleSite');
+              typeWriter(titulo);
+            </script>
+
+            <!-- Arrow -->
+            <div class="mt-5 mx-auto d-md-none">
+              <a class="scroll" href="#about">
+                <i class="text-white fas fa-chevron-down fa-2x"></i>
+              </a>
             </div>
-          </a>
+
+          </div>
         </div>
 
-        <div class="col-10 col-md-4 mx-auto mt-4 mb-auto">
-          <a href="sites.html">
-            <div class="card my-auto levitate">
-              <img class="card-img-top col-12" src="images/website_example_9.svg">
-              <div class="card-body">
-                <h5 class="card-title text-center mt-4 mb-3">Quero criar um site</h5>
-              </div>
-            </div>
-          </a>
-        </div> 
 
       </div>
-
     </div>
 
-  </section>
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
+  </header>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-   https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-analytics.js"></script>
 
-  <script src="js/firebase.js"></script>
-  <script src="js/real-time-database.js"></script>
+  <!--Main-->
+  <main class="mt-5">
 
+    <div class="container">
+
+      <!-- About -->
+      <section id="about" class="py-5">
+
+        <div class="row">
+
+          <!-- Grid column -->
+          <div class="col mt-auto mb-5 mx-auto text-center">
+            <div class="avatar mx-auto">
+              <img src="./images/messias.jpg" class="rounded shadow" alt="Sample avatar"
+                style="height: 15em; width: 15em;">
+            </div>
+            <h4 class="font-weight-bold dark-grey-text my-4">Messias</h4>
+            <h6 class="text-uppercase text-muted mb-4"><strong>Full-Stack Developer</strong></h6>
+            <a href="https://www.linkedin.com/in/messias-nunesmaia/" type="button" class="shadow bg-blue btn-floating btn mx-1 mb-0 btn-fb">
+              <i class="text-white fab fa-linkedin-in fa-lg"></i>
+            </a>
+            <a href="https://www.instagram.com/messias_lsn/" type="button" class="shadow bg-pink btn-floating btn mx-1 mb-0 btn-dribbble">
+              <i class="text-white fab fa-instagram fa-lg"></i>
+            </a>
+            <a href="https://github.com/Messias-Dev" type="button" class="shadow bg-dark btn-floating btn mx-1 mb-0 btn-tw">
+              <i class="text-white fab fa-github fa-lg"></i>
+            </a>
+          </div>
+
+          <!-- Text -->
+          <div class="col mx-auto pt-3 mb-5">
+
+            <h4><strong>Sobre</strong></h4>
+            <p class="text-muted">
+              Olá, meu nome é Messias Nunesmaia. <br> Tenho 21 anos, sou estudante de <strong>Engenharia de
+                Software</strong>
+              e <strong>Estagiário em TI</strong>.
+              <br>
+              Tenho experiência em desenvolvimento Full-Stack de sistemas <strong>WEB</strong> e <strong>Mobile</strong>
+            </p>
+            <p><strong>Principais Habilidades</strong></p>
+            <p class="text-muted">
+            <ul>
+              <li>Spring Framework</li>
+              <li>Android Nativo</li>
+              <li>Flutter</li>
+            </ul>
+            </p>
+
+          </div>
+
+        </div>
+
+      </section>
+
+      <hr class="my-5" />
+
+      <!--Objective-->
+      <section class="text-center py-4">
+        <h4 class="mb-5"><strong>Objetivo</strong></h4>
+
+        <div class="row">
+
+          <p class="lead">
+            Desenvolver soluções tecnologicas voltadas para <strong>WEB</strong> ou <strong>Mobile</strong>, aprimorar
+            minhas habilidades e ganhar experiência profissional.
+          </p>
+
+        </div>
+
+      </section>
+
+      <hr class="my-5" />
+
+      <!--Sites-->
+      <section class="text-center">
+        <h4 class="mb-5"><strong>Quer ter o seu site ?</strong></h4>
+
+        <div class="row">
+
+          <!-- Cards -->
+          <div class="col-lg-4 col-md-12 mb-4">
+            <div class="card shadow">
+              <div class="bg-image ripple" data-mdb-ripple-color="light">
+                <img src="./images/responsive.png" class="img-fluid" />
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Resposividade</h5>
+                <p class="card-text">
+                  Layouts responsivos em todos os dispositivos.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card shadow">
+              <div class="bg-image ripple" data-mdb-ripple-color="light">
+                <img src="./images/freedom.png" class="img-fluid" />
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Liberdade</h5>
+                <p class="card-text">
+                  Criação e atualização de conteúdo próprio.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card shadow">
+              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                <img src="./images/simple.png" class="img-fluid" />
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Simplicidade</h5>
+                <p class="card-text">
+                  Tenha seu conteúdo divulgado de forma objetiva, simples e direta.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <a href="./sites.html" class="col-5 col-sm-3 mt-5 mb-3 mx-auto btn-lg btn-success">Saber mais</a>
+          </div>
+
+        </div>
+
+      </section>
+
+      <hr class="my-5" />
+
+      <!--Apps-->
+      <section class="text-center">
+        <h4 class="mb-5">Quer ter o seu aplicativo ?</h4>
+
+        <div class="row">
+
+          <!-- Cards -->
+          <div class="col-lg-4 col-md-12 mb-4">
+            <div class="card shadow">
+              <div class="bg-image ripple" data-mdb-ripple-color="light">
+                <img src="./images/responsive.png" class="img-fluid" />
+                
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Controle</h5>
+                <p class="card-text">
+                  Tenha total controle sobre interações em seu aplicativo.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card shadow">
+              <div class="bg-image ripple" data-mdb-ripple-color="light">
+                <img src="./images/content.png" class="img-fluid" />
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Conteúdo</h5>
+                <p class="card-text">
+                  Tenha todo o tipo de conteúdo.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card shadow">
+              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                <img src="./images/security.png" class="img-fluid" />
+                  <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Segurança</h5>
+                <p class="card-text">
+                  Autenticação e Banco de Dados Seguro.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <a href="#!" class="col-5 col-sm-3 mt-5 mb-3 mx-auto btn-lg btn-success">Saber mais</a>
+          </div>
+
+        </div>
+
+      </section>
+
+      <hr class="my-5" />
+
+      <!-- Contact -->
+      <section class="mb-5">
+        <h4 class="mb-5 text-center"><strong>Entre em contato</strong></h4>
+
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-6">
+
+            <!-- Form -->
+            <form>
+
+              <!-- Ip Script -->
+              <script type="text/javascript">
+                var userip;
+              </script>
+
+              <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
+              <input type="text" name="Ip" id="user-ip" style="display: none;">
+
+              <script>
+                document.getElementById("user-ip").value = userip;
+              </script>
+
+              <div class="row mb-4">
+                <div class="col">
+                  <div class="form-outline">
+                    <input type="text" name="Nome" id="full-name" required class="form-control" />
+                    <label class="form-label" for="full-name">Nome</label>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-label">
+                    <select class="select-label" name="select" id="select">
+                      <option selected disabled value="">Selecione</option>
+                      <option value="site">Site</option>
+                      <option value="app">Aplicativo</option>
+                      <option value="siteApp">Ambos</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row mb-">
+                <div class="col-8">
+                  <!-- Email input -->
+                  <div class="form-outline mb-4">
+                    <input type="email" name="E-mail" id="email-address" required class="form-control" />
+                    <label class="form-label" for="email-address">E-mail</label>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <!-- Telephone input -->
+                  <div class="form-outline mb-4">
+                    <input type="number" name="Telefone" id="telephone" required class="form-control" />
+                    <label class="form-label" for="telephone">Telefone</label>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Message input -->
+              <div class="form-outline mb-4">
+                <textarea class="form-control" name="Finalidade" id="complaint" rows="4"></textarea>
+                <label class="form-label" for="complaint">Mensagem</label>
+              </div>
+
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-success text-white btn-block mb-4">
+                Enviar
+              </button>
+
+
+
+            </form>
+          </div>
+        </div>
+      </section>
+
+    </div>
+  </main>
+
+
+  <!--Footer-->
+  <footer class="bg-light text-lg-start">
+
+    <hr class="m-0" />
+
+    <div class="text-center py-4 align-items-center">
+      <p>Me siga nas redes</p>
+      <a href="https://www.linkedin.com/in/messias-nunesmaia/" class="btn btn-success btn-floating mx-1"
+        role="button" rel="nofollow" target="_blank">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <a href="https://www.instagram.com/messias_lsn/" class="btn btn-success btn-floating mx-1" role="button"
+        rel="nofollow" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://github.com/Messias-Dev" class="btn btn-success btn-floating mx-1" role="button" rel="nofollow"
+        target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2021 Copyright:
+      <a class="text-dark" href="https://www.messias.gq">Messias Nunesmaia</a>
+    </div>
+
+
+  </footer>
+
+
+
+
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.js"></script>
 
 </body>
 
